--- a/LeafBot/test-output/old/Default suite/methods-alphabetical.html
+++ b/LeafBot/test-output/old/Default suite/methods-alphabetical.html
@@ -1,28 +1,22 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="bf97b9">  <td>19/10/05 16:11:08</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ProjectSpecificMethods.afterMethod()[pri:0, instance:runner.TC001_Login@1552920]">&lt;&lt;afterMethod</td> 
-<td>&nbsp;</td>  <td>main@19409595</td>   <td></td> </tr>
-<tr bgcolor="bf97b9">  <td>19/10/05 16:11:22</td>   <td>13645</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ProjectSpecificMethods.afterMethod()[pri:0, instance:runner.TC001_Login@1552920]">&lt;&lt;afterMethod</td> 
-<td>&nbsp;</td>  <td>main@19409595</td>   <td></td> </tr>
-<tr bgcolor="bf97b9">  <td>19/10/05 16:10:55</td>   <td>-13315</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ProjectSpecificMethods.beforeMethod()[pri:0, instance:runner.TC001_Login@1552920]">&gt;&gt;beforeMethod</td> 
-<td>&nbsp;</td>  <td>main@19409595</td>   <td></td> </tr>
-<tr bgcolor="bf97b9">  <td>19/10/05 16:11:09</td>   <td>369</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ProjectSpecificMethods.beforeMethod()[pri:0, instance:runner.TC001_Login@1552920]">&gt;&gt;beforeMethod</td> 
-<td>&nbsp;</td>  <td>main@19409595</td>   <td></td> </tr>
-<tr bgcolor="dafa95">  <td>19/10/05 16:10:55</td>   <td>-13521</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Reporter.report()[pri:0, instance:runner.TC001_Login@1552920]">&gt;&gt;report</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@19409595</td>   <td></td> </tr>
-<tr bgcolor="686d7f">  <td>19/10/05 16:11:03</td>   <td>-5489</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(cucumber.api.testng.PickleEventWrapper, cucumber.api.testng.CucumberFeatureWrapper)[pri:0, instance:runner.TC001_Login@1552920]">runScenario</td> 
-  <td>main@19409595</td>   <td></td> </tr>
-<tr bgcolor="686d7f">  <td>19/10/05 16:11:18</td>   <td>9402</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(cucumber.api.testng.PickleEventWrapper, cucumber.api.testng.CucumberFeatureWrapper)[pri:0, instance:runner.TC001_Login@1552920]">runScenario</td> 
-  <td>main@19409595</td>   <td></td> </tr>
-<tr bgcolor="b3acfe">  <td>19/10/05 16:10:54</td>   <td>-13969</td> <td>&nbsp;</td><td title="&gt;&gt;TC001_Login.setData()[pri:0, instance:runner.TC001_Login@1552920]">&gt;&gt;setData</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@19409595</td>   <td></td> </tr>
-<tr bgcolor="686d7f">  <td>19/10/05 16:10:54</td>   <td>-13945</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AbstractTestNGCucumberTests.setUpClass()[pri:0, instance:runner.TC001_Login@1552920]">&gt;&gt;setUpClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@19409595</td>   <td></td> </tr>
-<tr bgcolor="dafa95">  <td>19/10/05 16:10:53</td>   <td>-15036</td> <td title="&gt;&gt;Reporter.startReport()[pri:0, instance:runner.TC001_Login@1552920]">&gt;&gt;startReport</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@19409595</td>   <td></td> </tr>
-<tr bgcolor="dafa95">  <td>19/10/05 16:11:22</td>   <td>14103</td> <td title="&lt;&lt;Reporter.stopReport()[pri:0, instance:runner.TC001_Login@1552920]">&lt;&lt;stopReport</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@19409595</td>   <td></td> </tr>
-<tr bgcolor="686d7f">  <td>19/10/05 16:11:22</td>   <td>13922</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AbstractTestNGCucumberTests.tearDownClass()[pri:0, instance:runner.TC001_Login@1552920]">&lt;&lt;tearDownClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@19409595</td>   <td></td> </tr>
+<tr bgcolor="c792b5">  <td>19/11/16 16:08:50</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ProjectSpecificMethods.afterMethod()[pri:0, instance:com.leafBot.testcases.TC_ACME_GetInvoiceNumber@32d2fa64]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td>  <td>main@2092769598</td>   <td></td> </tr>
+<tr bgcolor="c792b5">  <td>19/11/16 16:08:41</td>   <td>-9205</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ProjectSpecificMethods.beforeMethod()[pri:0, instance:com.leafBot.testcases.TC_ACME_GetInvoiceNumber@32d2fa64]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>main@2092769598</td>   <td></td> </tr>
+<tr bgcolor="846679">  <td>19/11/16 16:08:44</td>   <td>-6013</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_ACME_GetInvoiceNumber.getInvoiceNumber()[pri:0, instance:com.leafBot.testcases.TC_ACME_GetInvoiceNumber@32d2fa64]">getInvoiceNumber</td> 
+  <td>main@2092769598</td>   <td></td> </tr>
+<tr bgcolor="81ad78">  <td>19/11/16 16:08:41</td>   <td>-9231</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Reporter.report()[pri:0, instance:com.leafBot.testcases.TC_ACME_GetInvoiceNumber@32d2fa64]">&gt;&gt;report</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2092769598</td>   <td></td> </tr>
+<tr bgcolor="846679">  <td>19/11/16 16:08:41</td>   <td>-9343</td> <td>&nbsp;</td><td title="&gt;&gt;TC_ACME_GetInvoiceNumber.setData()[pri:0, instance:com.leafBot.testcases.TC_ACME_GetInvoiceNumber@32d2fa64]">&gt;&gt;setData</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2092769598</td>   <td></td> </tr>
+<tr bgcolor="b8fe70">  <td>19/11/16 16:08:41</td>   <td>-9331</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AbstractTestNGCucumberTests.setUpClass()[pri:0, instance:com.leafBot.testcases.TC_ACME_GetInvoiceNumber@32d2fa64]">&gt;&gt;setUpClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2092769598</td>   <td></td> </tr>
+<tr bgcolor="81ad78">  <td>19/11/16 16:08:40</td>   <td>-9660</td> <td title="&gt;&gt;Reporter.startReport()[pri:0, instance:com.leafBot.testcases.TC_ACME_GetInvoiceNumber@32d2fa64]">&gt;&gt;startReport</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2092769598</td>   <td></td> </tr>
+<tr bgcolor="81ad78">  <td>19/11/16 16:08:50</td>   <td>260</td> <td title="&lt;&lt;Reporter.stopReport()[pri:0, instance:com.leafBot.testcases.TC_ACME_GetInvoiceNumber@32d2fa64]">&lt;&lt;stopReport</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2092769598</td>   <td></td> </tr>
+<tr bgcolor="b8fe70">  <td>19/11/16 16:08:50</td>   <td>94</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AbstractTestNGCucumberTests.tearDownClass()[pri:0, instance:com.leafBot.testcases.TC_ACME_GetInvoiceNumber@32d2fa64]">&lt;&lt;tearDownClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2092769598</td>   <td></td> </tr>
 </table>
